--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
     <h1>Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
+    <h6>Developed by: Dacua, Marc Eugene</h6>
     <hr />
 
     <a href="index.html">Home</a> | <a href="products.html">Products</a> |
