--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
       Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not
       officially affiliated with Konami Digital Entertainment.
     </h5>
-    <h6>Developed by: Dacua, Marc Eugene master</h6>
+    <h6>Developed by: Dacua, Marc Eugene</h6>
   </body>
 </html>
