added font-face-teko to <p> and favicon

--- a/index.html
+++ b/index.html
@@ -4,39 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lancers HQ</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <h1>Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
     
     <hr />
-
+    <!-- navbar  -->
     <a href="index.html">Home</a> | <a href="products.html">Products</a> |
     <a href="community.html">Community</a>
 
     <hr />
     <h2>About us</h2>
-    <p>
+    <p class="teko-font">
       Welcome to Lancers HQ! We are a passionate small business based in Cebu,
       dedicated to bringing the excitement of Yu-Gi-Oh! to our community.
       Located near the University of Cebu, our main headquarters is where our
       love for the game comes to life.
     </p>
-    <p>
+    <p class="teko-font">
       At Lancers, we're more than just a store—we're a group of dedicated
       duelists who share a deep passion for Yu-Gi-Oh! Our journey started with a
       simple love for the game, and now we're here to share that enthusiasm with
       you. Whether you're a seasoned player or just starting your dueling
       adventure, we've got the cards and expertise to help you build your dream
       deck.
-    </p>
-    <p>
+      <br><br>
       Join us at Lancers, where the heart of Yu-Gi-Oh! beats strong. Let's duel!
+
     </p>
 
     <h2>Products</h2>
 
-    <p>
+    <p class="teko-font">
       Browse our extensive product page to find everything from the latest Core
       Sets to exclusive Singles, and all the essential Accessories you need.
       Whether you're building a new deck or looking for that one special card,
@@ -46,7 +51,7 @@
     <a href="products.html">Click here >>></a>
 
     <h2>Community</h2>
-    <p>
+    <p class="teko-font">
       At Lancers, we believe that Yu-Gi-Oh! is more than just a game—it's a way
       to connect, share, and grow as duelists. Our vibrant community is the
       heart of what we do, and we're proud to offer a space where players of all
@@ -58,7 +63,9 @@
     <br />
     <hr />
 
-    <h3>Lancers HQ</h3>
+    <!-- footer -->
+    <div>
+      <h3>Lancers HQ</h3>
     <p>Thank you for checking out Lancers HQ!</p>
 
     <h4>Address</h4>
@@ -76,7 +83,6 @@
     <h4>Join our Community:</h4>
     <a href="#">Sign up</a> for our newsletter to stay updated on the latest
     products, tournaments, and community events.
-
     <hr />
 
     <h5>
@@ -84,5 +90,6 @@
       officially affiliated with Konami Digital Entertainment.
     </h5>
     <h6>Developed by: Dacua, Marc Eugene</h6>
+    </div>
   </body>
 </html>
