--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lancers HQ</title>
 
     <!-- Copy start here for style -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
