--- a/products.html
+++ b/products.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products</title>
+    <!-- Copy style from here -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- end copy here -->
   </head>
   <body>
     <h1 class="exo-2-bold webtitle">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
@@ -22,29 +24,30 @@
     <hr>
     <div class="box">
       <h2 class="exo-2-bold title">Products</h2>
-
-    <p>
+      <br>
+    <p class="exo-2-light">
       Browse our extensive product page to find everything from the latest Core
       Sets to exclusive Singles, and all the essential Accessories you need.
       Whether you're building a new deck or looking for that one special card,
       we've got you covered.
     </p>
-    </div>
+    </div>  
     
     <ul>
-      <li>
-        <h3>Core Sets</h3>
-        <p>
+      <div class="box ">
+        <h3 class="exo-2-bold title"><li>Core Sets</li></h3>
+        <p class="exo-2-normal">
           Dive into the heart of Yu-Gi-Oh! with our Core Sets, featuring the
           latest and most essential cards that every duelist needs. These sets
           offer a balanced mix of monsters, spells, and traps, perfect for
           enhancing your deck and staying competitive in the ever-evolving game.
-          <a href="core_set.html">Learn more...</a>
+          <a href="core_set.html" class="">Learn more>>></a>
         </p>
-      </li>
-      <li>
-        <h3>Deck Builders</h3>
-        <p>
+      </div>
+
+      <div class="box ">
+        <h3 class="exo-2-bold title"><li>Deck Builders</li></h3>
+        <p class="exo-2-normal">
           Take your strategy to the next level with our Deck Builders. These
           products are designed to give you a solid foundation, complete with
           themed cards that work together to create powerful combos. Whether
@@ -52,10 +55,11 @@
           our Deck Builders will set you on the path to victory.
           <a href="deck_build.html">Learn More...</a>
         </p>
-      </li>
-      <li>
-        <h3>Singles</h3>
-        <p>
+      </div>
+
+      <div class="box ">
+        <h3 class="exo-2-bold title"><li>Singles</li></h3>
+        <p class="exo-2-normal">
           Looking for that one specific card to complete your deck? Our Singles
           collection is here for you. We offer a wide range of individual cards,
           from rare and ultra-rare to common must-haves, ensuring you can find
@@ -63,15 +67,16 @@
           opponents.
           <a href="singles.html">Learn More...</a>
         </p>
-      </li>
-      <li>
-        <h3>Accessories</h3>
-        <p>
+    </div>
+
+      <div class="box">
+        <h3 class="exo-2-bold title"><li>Accessories</li></h3>
+        <p class="exo-2-normal">
           Keep your cards in pristine condition and showcase your dueling style
           with our range of Accessories.
           <a href="accessories.html">Learn More...</a>
         </p>
-      </li>
+    </div>
     </ul>
 
     <br />
