--- a/community.html
+++ b/community.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Community</title>
-  </head>
-  <body>
-    <h1>Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
-    <hr />
 
-    <a href="index.html">Home</a> | <a href="products.html">Products</a> |
-    <a href="community.html">Community</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Community</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+</head>
 
-    <hr />
-    <h2>Community</h2>
+<body>
+  <h1 class="exo-2-bold webtitle">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
+  <!-- navbar  -->
+  <div class="navbar">
+    <!-- center content of navbar -->
+    <a href="index.html" class="exo-2-light navbutton" style="border-left-width: 1px;">Home</a><a href="products.html"
+      class="exo-2-light navbutton">Products</a><a href="community.html" class="exo-2-light navbutton">Community</a>
+  </div>
+
+  <hr>
+  <div class="box">
+    <h2 class="exo-2-bold title">Community</h2>
     <p>
       At Lancers, we believe that Yu-Gi-Oh! is more than just a game—it's a way
       to connect, share, and grow as duelists. Our vibrant community is the
       heart of what we do, and we're proud to offer a space where players of all
       levels can come together to enjoy the game we all love.
-    </p>
-
-    <h3>Tournaments</h3>
+    </p></div>
+  
+  <div class="box">
+    <h3 class="exo-2-bold title">Tournaments</h3>
     <p>
       We host Tournaments regularly, providing an exciting and competitive
       environment for duelists to test their skills and strategies. Whether
@@ -33,11 +45,15 @@
       Explore the different tournament formats available at Lancers by clicking
       in one of the links
     </p>
-    <ol>
+    <br>
+    <ol class="exo-2-normal">
       <li><a href="sanctioned.html">Sanctioned Tournament</a></li>
       <li><a href="casual.html">Casual Tournament</a></li>
     </ol>
-    <h3>Deck Profiles</h3>
+  </div>
+  
+  <div class="box">
+    <h3 class="exo-2-bold title">Deck Profiles</h3>
     <p>
       We encourage our community members to Share Deck Profiles. By sharing your
       deck builds and strategies, you can inspire others and learn new
@@ -45,47 +61,56 @@
       and helping each other become better duelists.
     </p>
     <p>Check out our featured Deck Profiles</p>
-    <ol>
+    <br>
+    <ol class="exo-2-normal">
       <li><a href="salad.html">Salamangreat</a></li>
       <li><a href="cydra.html">Cyber Dragon</a></li>
       <li><a href="drytron.html">Cyber Angel Drytons</a></li>
       <li><a href="dinos.html">Dinos</a></li>
     </ol>
-    <h3>Trading</h3>
-    <p>
-      Trading Cards is another cornerstone of our community. We understand that
-      building the perfect deck often involves finding those specific cards that
-      make all the difference. Our community is active in trading, allowing you
-      to swap cards and complete your collections.
-    </p>
-    <br />
-    <hr />
+  </div>
+  
+  <div class="box">
+    <h3 class="exo-2-bold title">Trading</h3>
+  <p>
+    Trading Cards is another cornerstone of our community. We understand that
+    building the perfect deck often involves finding those specific cards that
+    make all the difference. Our community is active in trading, allowing you
+    to swap cards and complete your collections.
+  </p>
+  </div>
+  
+  <br />
+  <hr />
 
-    <h3>Lancers HQ</h3>
+  <!-- footer -->
+  <div class="footer exo-2-normal">
+    <h3 class="foot-title exo-2-bold">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h3>
     <p>Thank you for checking out Lancers HQ!</p>
 
-    <h4>Address</h4>
-    Main Headquarters: Near the University of Cebu
+    <h4 class="exo-2-bold">Address</h4>
+    <p>Main Headquarters: Near the University of Cebu</p>
 
-    <h4>Contacts</h4>
-    Email: <a href="#">support@lancers_ygo.com</a> <br />
-    Phone: +63-985-456-2678
+    <h4 class="exo-2-bold">Contacts</h4>
+    <p>Email: <a href="#">support@lancers_ygo.com</a> <br />
+      Phone: +63-985-456-2678</p>
+    <h4 class="exo-2-bold">Follow Us</h4>
+    <p><a href="https://www.facebook.com">Facebook</a> |
+      <a href="https://www.instagram.com">Instagram</a> |
+      <a href="https://www.x.com">X</a>
+    </p>
 
-    <h4>Follow Us</h4>
-    <a href="https://www.facebook.com">Facebook</a> |
-    <a href="https://www.instagram.com">Instagram</a> |
-    <a href="https://www.x.com">X</a>
-
-    <h4>Join our Community:</h4>
-    <a href="#">Sign up</a> for our newsletter to stay updated on the latest
-    products, tournaments, and community events.
-
-    <hr />
-
+    <h4 class="exo-2-bold">Join our Community:</h4>
+    <p><a href="#">Sign up</a> for our newsletter to stay updated on the latest
+      products, tournaments, and community events.</p>
+  </div>
+  <hr />
+  <div class="footer exo-2-normal">
     <h5>
       Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not
-      officially affiliated with Konami Digital Entertainment.
+      officially affiliated with Konami Digital Entertainment. <br>&#169 Developed by MarNonymous792
     </h5>
-    <h6>Developed by: Dacua, Marc Eugene</h6>
-  </body>
+  </div>
+</body>
+
 </html>
