--- a/core_set.html
+++ b/core_set.html
@@ -1,119 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Core Sets</title>
-  </head>
-  <body>
-    <h1>Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
-    <hr />
-    <a href="index.html">Home</a> | <a href="products.html">Products</a> |
-    <a href="community.html">Community</a>
 
-    <hr />
-    <h2>Yu-gi-oh Series 12 Core Booster Set</h2>  
-    <ul>
-      <li>
-        <h4>
-          <a href="https://yugipedia.com/wiki/Duelist_Nexus">Duelist Nexus</a>
-        </h4>
-        <img src="images/core_set/dune.png" alt="Duelist Nexus cover photo" />
-      </li>
-      <li>
-        <h4>
-          <a href="https://yugipedia.com/wiki/Age_of_Overlord"
-            >Age of Overlord</a
-          >
-        </h4>
-        <img src="images/core_set/agov.png" alt="Age of Overlord cover photo" />
-      </li>
-      <li>
-        <h4>
-          <a href="https://yugipedia.com/wiki/Phantom_Nightmare"
-            >Phantom Nightmare</a
-          >
-        </h4>
-        <img
-          src="images/core_set/phni.png"
-          alt="Phantom Nightmare cover photo"
-        />
-      </li>
-      <li>
-        <h4>
-          <a href="https://yugipedia.com/wiki/Legacy_of_Destruction"
-            >Legacy of Destruction</a
-          >
-        </h4>
-        <img
-          src="images/core_set/lede.png"
-          alt="Legacy off Destruction cover photo"
-        />
-      </li>
-      <li>
-        <h4>
-          <a href="https://yugipedia.com/wiki/The_Infinite_Forbidden"
-            >Infinite Forbidden</a
-          >
-        </h4>
-        <img
-          src="images/core_set/info.png"
-          alt="Infinite Forbidden cover photo"
-        />
-      </li>
-      <li>
-        <h4>
-          <a href="https://yugipedia.com/wiki/Rage_of_the_Abyss"
-            >Rage of the Abyss</a
-          >
-        </h4>
-        <img
-          src="images/core_set/rota.png"
-          alt="Rage of the Abyss cover photo"
-        />
-      </li>
-      <li>
-        <h4>
-          <a href="https://yugipedia.com/wiki/Supreme_Darkness"
-            >Supreme Darkness</a
-          >
-          (Coming Soon!)
-        </h4>
-        <img
-          src="images/core_set/suda.png"
-          alt="Supreme Darkness cover photo"
-        />
-      </li>
-    </ul>
-    
-    <br />
-    <hr />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Core Sets</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-    <h3>Lancers HQ</h3>
+<body>
+  <h1 class="exo-2-bold webtitle">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
+
+  <!-- navbar  -->
+  <div class="navbar">
+    <!-- center content of navbar -->
+    <a href="index.html" class="exo-2-light navbutton" style="border-left-width: 1px;">Home</a><a href="products.html"
+      class="exo-2-light navbutton">Products</a><a href="community.html" class="exo-2-light navbutton">Community</a>
+  </div>
+
+  <hr />
+  <h2 class="exo-2-bold title">Yu-gi-oh Series 12 Core Booster Set</h2>
+  <ul>
+    <div class="card exo-2-bold">
+      <img src="images/core_set/dune.png" alt="Duelist Nexus cover photo" />
+      <li>
+        <a href="https://yugipedia.com/wiki/Duelist_Nexus">Duelist Nexus</a>
+      </li>
+    </div>
+
+    <div class="card exo-2-bold">
+      <img src="images/core_set/agov.png" alt="Age of Overlord cover photo" />
+      <li>
+        <a href="https://yugipedia.com/wiki/Age_of_Overlord">Age of Overlord</a>
+      </li>
+    </div>
+
+    <div class="card exo-2-bold">
+      <img src="images/core_set/phni.png" alt="Phantom Nightmare cover photo" />
+      <li>
+        <a href="https://yugipedia.com/wiki/Phantom_Nightmare">Phantom Nightmare</a>
+      </li>
+    </div>
+
+    <div class="card exo-2-bold">
+      <img src="images/core_set/lede.png" alt="Legacy off Destruction cover photo" />
+      <li>
+        <a href="https://yugipedia.com/wiki/Legacy_of_Destruction">Legacy of Destruction</a>
+      </li>
+    </div>
+
+    <div class="card exo-2-bold">
+      <img src="images/core_set/info.png" alt="Infinite Forbidden cover photo" />
+      <li>
+        <a href="https://yugipedia.com/wiki/The_Infinite_Forbidden">Infinite Forbidden</a>
+      </li>
+    </div>
+
+
+    <div class="card exo-2-bold">
+      <img src="images/core_set/rota.png" alt="Rage of the Abyss cover photo" />
+      <li>
+        <a href="https://yugipedia.com/wiki/Rage_of_the_Abyss">Rage of the Abyss</a>
+      </li>
+    </div>
+
+    <div class="card exo-2-bold">
+      <img src="images/core_set/suda.png" alt="Supreme Darkness cover photo" />
+      <li>
+        <a href="https://yugipedia.com/wiki/Supreme_Darkness">Supreme Darkness</a>
+        <p style="background-color: inherit;" class="exo-2-light">(Coming Soon!)</p>
+    </li>
+    </div>
+  
+  </ul>
+
+  <br />
+  <hr />
+
+  <!-- footer -->
+  <div class="footer exo-2-normal">
+    <h3 class="foot-title exo-2-bold">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h3>
     <p>Thank you for checking out Lancers HQ!</p>
 
-    <h4>Address</h4>
-    Main Headquarters: Near the University of Cebu
+    <h4 class="exo-2-bold">Address</h4>
+    <p>Main Headquarters: Near the University of Cebu</p>
 
-    <h4>Contacts</h4>
-    Email: <a href="#">support@lancers_ygo.com</a> <br />
-    Phone: +63-985-456-2678
+    <h4 class="exo-2-bold">Contacts</h4>
+    <p>Email: <a href="#">support@lancers_ygo.com</a> <br />
+      Phone: +63-985-456-2678</p>
 
-    <h4>Follow Us</h4>
-    <a href="https://www.facebook.com">Facebook</a> |
-    <a href="https://www.instagram.com">Instagram</a> |
-    <a href="https://www.x.com">X</a>
+    <h4 class="exo-2-bold">Follow Us</h4>
+    <p><a href="https://www.facebook.com">Facebook</a> |
+      <a href="https://www.instagram.com">Instagram</a> |
+      <a href="https://www.x.com">X</a>
+    </p>
 
-    <h4>Join our Community:</h4>
-    <a href="#">Sign up</a> for our newsletter to stay updated on the latest
-    products, tournaments, and community events.
 
-    <hr />
-
+    <h4 class="exo-2-bold">Join our Community:</h4>
+    <p><a href="#">Sign up</a> for our newsletter to stay updated on the latest
+      products, tournaments, and community events.</p>
+  </div>
+  <hr />
+  <div class="footer exo-2-normal">
     <h5>
       Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not
-      officially affiliated with Konami Digital Entertainment.
+      officially affiliated with Konami Digital Entertainment. <br>&#169 Developed by MarNonymous792
     </h5>
-    <h6>Developed by: Dacua, Marc Eugene</h6>
-  </body>
+  </div>
+</body>
+
 </html>
