--- a/core_set.html
+++ b/core_set.html
@@ -25,6 +25,8 @@
 
   <hr />
   <h2 class="exo-2-bold title">Yu-gi-oh Series 12 Core Booster Set</h2>
+
+  <!-- Booster Sets -->
   <ul>
     <div class="card exo-2-bold">
       <img src="images/core_set/dune.png" alt="Duelist Nexus cover photo" />
@@ -74,11 +76,10 @@
       <li>
         <a href="https://yugipedia.com/wiki/Supreme_Darkness">Supreme Darkness</a>
         <p style="background-color: inherit;" class="exo-2-light">(Coming Soon!)</p>
-    </li>
+      </li>
     </div>
-  
-  </ul>
 
+  </ul>
   <br />
   <hr />
 
