--- a/deck_build.html
+++ b/deck_build.html
@@ -5,69 +5,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deck Builders</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h1>Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
-    <hr />
-    <a href="index.html">Home</a> | <a href="products.html">Products</a> |
-    <a href="community.html">Community</a>
+    <h1 class="exo-2-bold webtitle">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
+    
+    <!-- navbar  -->
+    <div class="navbar">
+        <!-- center content of navbar -->
+        <a href="index.html" class="exo-2-light navbutton" style="border-left-width: 1px;">Home</a><a
+            href="products.html" class="exo-2-light navbutton">Products</a><a href="community.html"
+            class="exo-2-light navbutton">Community</a>
+    </div>
 
     <hr />
-    <h2>Yu-Gi-Oh Deck Build Packs</h2>
+    <h2 class="exo-2-bold title">Yu-Gi-Oh Deck Build Packs</h2>
 
     <ul>
-        <li>
-            <h4><a href="https://yugipedia.com/wiki/Deck_Build_Pack:_Tactical_Masters">Tactical Masters</a></h4>
+        <div class="card exo-2-bold">
             <img src="images/deck_build/dbtm.png" alt="Tactical Masters cover photo">
-        </li>
-        <li>
-            <h4><a href="https://yugipedia.com/wiki/Deck_Build_Pack:_Amazing_Defenders">Amazing Defenders</a></h4>
+            <li>
+                <a href="https://yugipedia.com/wiki/Deck_Build_Pack:_Tactical_Masters">Tactical Masters</a>
+            </li>
+        </div>
+        
+        <div class="card exo-2-bold">
             <img src="images/deck_build/dbad.png" alt="Amazing Defenders cover photo">
-        </li>
-        <li>
-            <h4><a href="https://yugipedia.com/wiki/Deck_Build_Pack:_Wild_Survivors">Wild Survivors</a></h4>
+            <li>
+                <a href="https://yugipedia.com/wiki/Deck_Build_Pack:_Amazing_Defenders">Amazing Defenders</a></>
+            </li>
+        </div>
+        <div class="card exo-2-bold">
             <img src="images/deck_build/dbws.png" alt="Wild Survivors cover photo">
-        </li>
-        <li>
-            <h4><a href="https://yugipedia.com/wiki/Deck_Build_Pack:_Valiant_Smashers">Valiant Smashers</a></h4>
+            <li>
+                <a href="https://yugipedia.com/wiki/Deck_Build_Pack:_Wild_Survivors">Wild Survivors</a>    
+            </li>
+        </div>
+        <div class="card exo-2-bold">
             <img src="images/deck_build/dbvs.png" alt="Valiant Smashers cover photo">
-        </li>
-        <li>
-            <h4><a href="https://yugipedia.com/wiki/Deck_Build_Pack:_Crossover_Breakers">Crossover Breakers</a></h4>
+            <li>
+                <a href="https://yugipedia.com/wiki/Deck_Build_Pack:_Valiant_Smashers">Valiant Smashers</a>
+            </li>
+        </div>
+        <div class="card exo-2-bold">
             <img src="images/deck_build/dbcb.png" alt="Crossover Breakers cover photo">
-        </li>
+            <li>
+                <a href="https://yugipedia.com/wiki/Deck_Build_Pack:_Crossover_Breakers">Crossover Breakers</a>    
+            </li>
+        </div> 
     </ul>
 
     <br />
     <hr />
+    <!-- footer -->
+    <div class="footer exo-2-normal">
+        <h3 class="foot-title exo-2-bold">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h3>
+        <p>Thank you for checking out Lancers HQ!</p>
 
-    <h3>Lancers HQ</h3>
-    <p>Thank you for checking out Lancers HQ!</p>
+        <h4 class="exo-2-bold">Address</h4>
+        <p>Main Headquarters: Near the University of Cebu</p>
 
-    <h4>Address</h4>
-    Main Headquarters: Near the University of Cebu
+        <h4 class="exo-2-bold">Contacts</h4>
+        <p>Email: <a href="#">support@lancers_ygo.com</a> <br />
+            Phone: +63-985-456-2678</p>
 
-    <h4>Contacts</h4>
-    Email: <a href="#">support@lancers_ygo.com</a> <br />
-    Phone: +63-985-456-2678
+        <h4 class="exo-2-bold">Follow Us</h4>
+        <p><a href="https://www.facebook.com">Facebook</a> |
+            <a href="https://www.instagram.com">Instagram</a> |
+            <a href="https://www.x.com">X</a>
+        </p>
 
-    <h4>Follow Us</h4>
-    <a href="https://www.facebook.com">Facebook</a> |
-    <a href="https://www.instagram.com">Instagram</a> |
-    <a href="https://www.x.com">X</a>
 
-    <h4>Join our Community:</h4>
-    <a href="#">Sign up</a> for our newsletter to stay updated on the latest
-    products, tournaments, and community events.
-
+        <h4 class="exo-2-bold">Join our Community:</h4>
+        <p><a href="#">Sign up</a> for our newsletter to stay updated on the latest
+            products, tournaments, and community events.</p>
+    </div>
     <hr />
-
-    <h5>
-        Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not
-        officially affiliated with Konami Digital Entertainment.
-    </h5>
-    <h6>Developed by: Dacua, Marc Eugene</h6>
+    <div class="footer exo-2-normal">
+        <h5>
+            Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not
+            officially affiliated with Konami Digital Entertainment. <br>&#169 Developed by MarNonymous792
+        </h5>
+    </div>
 </body>
 
 </html>
