--- a/singles.html
+++ b/singles.html
@@ -1,88 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Singles</title>
-  </head>
-  <body>
-    <h1>Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
-    <hr />
 
-    <a href="index.html">Home</a> | <a href="products.html">Products</a> |
-    <a href="community.html">Community</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Singles</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-    <hr />
-    <h2>Yu-Gi-Oh Singles</h2>
+<body>
+  <h1 class="exo-2-bold webtitle">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
 
-    <ul>
-      <li>
-        <h3>HR</h3>
+  <!-- navbar  -->
+  <div class="navbar">
+    <!-- center content of navbar -->
+    <a href="index.html" class="exo-2-light navbutton" style="border-left-width: 1px;">Home</a><a href="products.html"
+      class="exo-2-light navbutton">Products</a><a href="community.html" class="exo-2-light navbutton">Community</a>
+  </div>
+
+  <hr />
+  <h2 class="exo-2-bold title">Yu-Gi-Oh Singles</h2>
+
+  <ul>
+    <li class="exo-2-bold tray-title">HR</li>
+      <div class="tray">
         <img src="images/singles/HR/10083.jpg" alt="" />
-      </li>
-      <li>
-        <h3>SCR</h3>
+      </div>
+    
+    <li class="exo-2-bold tray-title">SCR</li>
+      <div class="tray">
         <img src="images/singles/SCR/10009.jpg" alt="" />
         <img src="images/singles/SCR/10013.jpg" alt="" />
-        <img src="images/singles/SCR/10055.jpg" alt="" />
-      </li>
-      <li>
-        <h3>UR</h3>
-        <img src="images/singles/UR/10024.jpg" alt="" />
-        <img src="images/singles/UR/10041.jpg" alt="" />
-        <img src="images/singles/UR/10070.jpg" alt="" />
-        <img src="images/singles/UR/10074.jpg" alt="" />
-        <img src="images/singles/UR/10087.jpg" alt="" />
-      </li>
-      <li>
-        <h3>SR</h3>
-        <img src="images/singles/SR/10002.jpg" alt="" />
-        <img src="images/singles/SR/10015.jpg" alt="" />
-        <img src="images/singles/SR/10028.jpg" alt="" />
-        <img src="images/singles/SR/10063.jpg" alt="" />
-        <img src="images/singles/SR/10084.jpg" alt="" />
-        <img src="images/singles/SR/10105.jpg" alt="" />
-        <img src="images/singles/SR/10128.jpg" alt="" />
-      </li>
-      <li>
-        <h3>R</h3>
+        <img src="images/singles/SCR/10055.jpg" alt="" /></div>
+    <li class="exo-2-bold tray-title">UR</li>   
+      <div class="tray">
+      <img src="images/singles/UR/10024.jpg" alt="" />
+      <img src="images/singles/UR/10041.jpg" alt="" />
+      <img src="images/singles/UR/10070.jpg" alt="" />
+      <img src="images/singles/UR/10074.jpg" alt="" />
+      <img src="images/singles/UR/10087.jpg" alt="" />
+      </div>
+
+    <li class="exo-2-bold tray-title">SR</li>
+      <div class="tray">
+      <img src="images/singles/SR/10002.jpg" alt="" />
+      <img src="images/singles/SR/10015.jpg" alt="" />
+      <img src="images/singles/SR/10028.jpg" alt="" />
+      <img src="images/singles/SR/10063.jpg" alt="" />
+      <img src="images/singles/SR/10084.jpg" alt="" />
+      <img src="images/singles/SR/10105.jpg" alt="" />
+      <img src="images/singles/SR/10128.jpg" alt="" />
+      </div>
+
+    <li class="exo-2-bold tray-title">R</li>
+      <div class="tray">
         <img src="images/singles/R/10005.jpg" alt="" />
         <img src="images/singles/R/10019.jpg" alt="" />
         <img src="images/singles/R/10020.jpg" alt="" />
         <img src="images/singles/R/10022.jpg" alt="" />
         <img src="images/singles/R/10045.jpg" alt="" />
         <img src="images/singles/R/10113.jpg" alt="" />
-      </li>
-    </ul>
+      </div>
+  </ul>
 
-    <br />
-    <hr />
+  <br />
+  <hr />
 
-    <h3>Lancers HQ</h3>
+  <!-- footer -->
+  <div class="footer exo-2-normal">
+    <h3 class="foot-title exo-2-bold">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h3>
     <p>Thank you for checking out Lancers HQ!</p>
 
-    <h4>Address</h4>
-    Main Headquarters: Near the University of Cebu
+    <h4 class="exo-2-bold">Address</h4>
+    <p>Main Headquarters: Near the University of Cebu</p>
 
-    <h4>Contacts</h4>
-    Email: <a href="#">support@lancers_ygo.com</a> <br />
-    Phone: +63-985-456-2678
+    <h4 class="exo-2-bold">Contacts</h4>
+    <p>Email: <a href="#">support@lancers_ygo.com</a> <br />
+      Phone: +63-985-456-2678</p>
 
-    <h4>Follow Us</h4>
-    <a href="https://www.facebook.com">Facebook</a> |
-    <a href="https://www.instagram.com">Instagram</a> |
-    <a href="https://www.x.com">X</a>
+    <h4 class="exo-2-bold">Follow Us</h4>
+    <p><a href="https://www.facebook.com">Facebook</a> |
+      <a href="https://www.instagram.com">Instagram</a> |
+      <a href="https://www.x.com">X</a>
+    </p>
 
-    <h4>Join our Community:</h4>
-    <a href="#">Sign up</a> for our newsletter to stay updated on the latest
-    products, tournaments, and community events.
 
-    <hr />
-
+    <h4 class="exo-2-bold">Join our Community:</h4>
+    <p><a href="#">Sign up</a> for our newsletter to stay updated on the latest
+      products, tournaments, and community events.</p>
+  </div>
+  <hr />
+  <div class="footer exo-2-normal">
     <h5>
       Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not
-      officially affiliated with Konami Digital Entertainment.
+      officially affiliated with Konami Digital Entertainment. <br>&#169 Developed by MarNonymous792
     </h5>
-    <h6>Developed by: Dacua, Marc Eugene</h6>
-  </body>
+  </div>
+</body>
+
 </html>
