--- a/accessories.html
+++ b/accessories.html
@@ -1,142 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accessories</title>
-  </head>
-  <body>
-    <h1>Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
-    <hr />
-    <a href="index.html">Home</a> | <a href="products.html">Products</a> |
-    <a href="community.html">Community</a>
 
-    <hr />
-    <h2>Accessories</h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Accessories</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+  <h1 class="exo-2-bold webtitle">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
+
+  <!-- navbar  -->
+  <div class="navbar">
+    <!-- center content of navbar -->
+    <a href="index.html" class="exo-2-light navbutton" style="border-left-width: 1px;">Home</a><a href="products.html"
+      class="exo-2-light navbutton">Products</a><a href="community.html" class="exo-2-light navbutton">Community</a>
+  </div>
+
+  <hr />
+  <h2 class="exo-2-bold title">Accessories</h2>
+  <ul>
+    <div class="box">
+      <li class="exo-2-bold title">Card Sleeves</li>
+      <p class="exo-2-normal">
+        Protect your cards from wear and tear with high-quality sleeves that
+        come in various designs. These card sleeves are also available in different layers of
+        protection
+      </p>
+    </div>
+
+    <!-- Sleeves card -->
     <ul>
-      <li>
-        <h4>Card Sleeves</h4>
-        <p>
-          Protect your cards from wear and tear with high-quality sleeves that
-          come in various designs.
-        </p>
-        <p>
-          These card sleeves are also available in different layers of
-          protection
-        </p>
-        <ul>
-          <li>
-            Perfect Fit <br />
-            <img
-              src="images/accessories/perfectfit.jpg"
-              alt="perfect fit sleeve photo"
-            />
-          </li>
-          <li>
-            Inner Sleeve <br />
-            <img
-              src="images/accessories/sleeves.jpg"
-              alt="inner sleeve photo"
-            />
-          </li>
+      <div class="card exo-2-normal">
+        <img src="images/accessories/perfectfit.jpg" alt="perfect fit sleeve photo" />
+        <li>Perfect Fit</li>
+      </div>
 
-          <li>
-            Outer Sleeve <br />
-            <img src="images/accessories/outer.jpg" alt="outer sleeve photo" />
-          </li>
-          <li>
-            Toploaders <br />
-            <img src="images/accessories/toploader.jpg" alt="toplader photo" />
-          </li>
-        </ul>
-      </li>
-      <li>
-        <h4>Deck Boxes</h4>
-        <p>
-          Store your deck securely and in style with our durable deck boxes,
-          available in multiple colors and themes.
-        </p>
-        <img src="images/accessories/small box.jpg" alt="small deck box" />
-        <img src="images/accessories/tower deck box.jpg" alt="tower deck box" />
-      </li>
-      <li>
-        <h4>Playmats</h4>
-        <p>
-          Enhance your playing experience with our playmats, providing a smooth
-          surface for dueling and showcasing your favorite designs.
-        </p>
-        <img
-          src="images/accessories/classic playmat.jpg"
-          alt="playmat with classic design"
-        />
-        <img
-          src="images/accessories/art playmat.jpg"
-          alt="playmat with promethean princess art"
-        />
-      </li>
-      <li>
-        <h4>Coins and Dice</h4>
-        <p>
-          Add flair to your game with custom dice and coins, perfect for keeping
-          track of counters, life points, or just rolling in style.
-        </p>
-        <img
-          src="images/accessories/coin_front.jpg"
-          alt="blue eyes white dragon front photo"
-        />
-        <img
-          src="images/accessories/coin_back.jpg"
-          alt="yugioh coin back photo"
-        />
-        <img
-          src="images/accessories/dice.jpg"
-          alt="blue eyes white dragon dice photo"
-        />
-      </li>
-      <li>
-        <h4>Binders</h4>
-        <p>
-          Organize and display your collection with our binders, ideal for
-          storing your most prized cards and keeping them safe.
-        </p>
-        <img
-          src="images/accessories/binder_outside.jpg"
-          alt="binder outer preference"
-        />
-        <img
-          src="images/accessories/binder_inside.jpg"
-          alt="binder inside preference"
-        />
-      </li>
+      <div class="card exo-2-normal">
+        <img src="images/accessories/sleeves.jpg" alt="inner sleeve photo" />
+        <li>Inner Sleeve </li>
+      </div>
+
+      <div class="card exo-2-normal">
+        <img src="images/accessories/outer.jpg" alt="outer sleeve photo" />
+        <li>Outer Sleeve</li>
+      </div>
+
+      <div class="card exo-2-normal">
+        <img src="images/accessories/toploader.jpg" alt="toplader photo" />
+        <li>Toploaders</li>
+      </div>
     </ul>
-    <br />
-    <hr />
 
-    <h3>Lancers HQ</h3>
+    <div class="box">
+      <li class="exo-2-bold title">Deck Boxes</li>
+      <p class="exo-2-normal">
+        Store your deck securely and in style with our durable deck boxes,
+        available in multiple colors and themes.
+      </p>
+    </div>
+
+    <img src="images/accessories/small box.jpg" alt="small deck box" class="card-2" />
+    <img src="images/accessories/tower deck box.jpg" alt="tower deck box" class="card-2" />
+
+    <div class="box">
+      <li class="exo-2-bold title">Playmats</li>
+      <p class="exo-2-normal">
+        Enhance your playing experience with our playmats, providing a smooth
+        surface for dueling and showcasing your favorite designs.
+      </p>
+    </div>
+
+    <img src="images/accessories/classic playmat.jpg" alt="playmat with classic design" class="card-2" />
+    <img src="images/accessories/art playmat.jpg" alt="playmat with promethean princess art" class="card-2" />
+
+    <div class="box">
+      <li class="exo-2-bold title">Coins and Dice</li>
+      <p class="exo-2-normal">
+        Add flair to your game with custom dice and coins, perfect for keeping
+        track of counters, life points, or just rolling in style.
+      </p>
+    </div>
+
+    <img src="images/accessories/coin_front.jpg" alt="blue eyes white dragon front photo" class="card-2" />
+    <img src="images/accessories/coin_back.jpg" alt="yugioh coin back photo" class="card-2" />
+    <img src="images/accessories/dice.jpg" alt="blue eyes white dragon dice photo" class="card-2" />
+
+    <div class="box">
+      <li class="exo-2-bold title">Binders</li>
+      <p class="exo-2-normal">Organize and display your collection with our binders, ideal for
+        storing your most prized cards and keeping them safe.
+      </p>
+    </div>
+
+    <img src="images/accessories/binder_outside.jpg" alt="binder outer preference" class="card-2" />
+    <img src="images/accessories/binder_inside.jpg" alt="binder inside preference" class="card-2" />
+
+  </ul>
+  <br />
+  <hr />
+  <!-- footer -->
+  <div class="footer exo-2-normal">
+    <h3 class="foot-title exo-2-bold">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h3>
     <p>Thank you for checking out Lancers HQ!</p>
 
-    <h4>Address</h4>
-    Main Headquarters: Near the University of Cebu
+    <h4 class="exo-2-bold">Address</h4>
+    <p>Main Headquarters: Near the University of Cebu</p>
 
-    <h4>Contacts</h4>
-    Email: <a href="#">support@lancers_ygo.com</a> <br />
-    Phone: +63-985-456-2678
+    <h4 class="exo-2-bold">Contacts</h4>
+    <p>Email: <a href="#">support@lancers_ygo.com</a> <br />
+      Phone: +63-985-456-2678</p>
 
-    <h4>Follow Us</h4>
-    <a href="https://www.facebook.com">Facebook</a> |
-    <a href="https://www.instagram.com">Instagram</a> |
-    <a href="https://www.x.com">X</a>
+    <h4 class="exo-2-bold">Follow Us</h4>
+    <p><a href="https://www.facebook.com">Facebook</a> |
+      <a href="https://www.instagram.com">Instagram</a> |
+      <a href="https://www.x.com">X</a>
+    </p>
 
-    <h4>Join our Community:</h4>
-    <a href="#">Sign up</a> for our newsletter to stay updated on the latest
-    products, tournaments, and community events.
 
-    <hr />
-
+    <h4 class="exo-2-bold">Join our Community:</h4>
+    <p><a href="#">Sign up</a> for our newsletter to stay updated on the latest
+      products, tournaments, and community events.</p>
+  </div>
+  <hr />
+  <div class="footer exo-2-normal">
     <h5>
       Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not
-      officially affiliated with Konami Digital Entertainment.
+      officially affiliated with Konami Digital Entertainment. <br>&#169 Developed by MarNonymous792
     </h5>
-    <h6>Developed by: Dacua, Marc Eugene</h6>
-  </body>
+  </div>
+</body>
+
 </html>
