--- a/drytron.html
+++ b/drytron.html
@@ -4,24 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deck Profile: Cyber Angel Dryton</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  
   </head>
   <body>
-    <h1>Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
+    <h1 class="exo-2-bold webtitle">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
+
+    <!-- navbar  -->
+    <div class="navbar">
+      <!-- center content of navbar -->
+      <a href="index.html" class="exo-2-light navbutton" style="border-left-width: 1px;">Home</a><a href="products.html"
+        class="exo-2-light navbutton">Products</a><a href="community.html" class="exo-2-light navbutton">Community</a>
+    </div>
+
     <hr />
+    <div class="box">
+      <h2 class="exo-2-bold title">Deck Profile</h2>
 
-    <a href="index.html">Home</a> | <a href="products.html">Products</a> |
-    <a href="community.html">Community</a>
-
-    <hr />
-    <h2>Deck Profile</h2>
-
-    <h3>Deck used: Cyber Angel Dryton</h3>
-    <h4>Duelist: Nelsy Rosas</h4>
+    <h3 class="exo-2-bold title">Deck used: Cyber Angel Dryton</h3>
+    <h4 class="exo-2-bold title">Duelist: Nelsy Rosas</h4>
 
     <img src="images/decklist/drytron.jpg" alt="Dryton deck list" />
-
-    <h4>Lancers' Mini Tournament (Psycon Qualifiers)</h4>
-    <p>
+    </div>
+    
+    <div class="box">
+      <h4 class="exo-2-bold title">Lancers' Mini Tournament (PSYCON Qualifiers)</h4>
+    <p class="exo-2-normal">
       No. of Players: 4 Players (Round Robin)<br />
       Standing: 2nd <br />
       <br />
@@ -29,35 +42,41 @@
       R2: vs Cyberdark X<br />
       R3: vs @ignister O-X <br />
     </p>
+    </div>
+    
 
     <br />
     <hr />
 
-    <h3>Lancers HQ</h3>
-    <p>Thank you for checking out Lancers HQ!</p>
-
-    <h4>Address</h4>
-    Main Headquarters: Near the University of Cebu
-
-    <h4>Contacts</h4>
-    Email: <a href="#">support@lancers_ygo.com</a> <br />
-    Phone: +63-985-456-2678
-
-    <h4>Follow Us</h4>
-    <a href="https://www.facebook.com">Facebook</a> |
-    <a href="https://www.instagram.com">Instagram</a> |
-    <a href="https://www.x.com">X</a>
-
-    <h4>Join our Community:</h4>
-    <a href="#">Sign up</a> for our newsletter to stay updated on the latest
-    products, tournaments, and community events.
-
+    <!-- footer -->
+    <div class="footer exo-2-normal">
+      <h3 class="foot-title exo-2-bold">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h3>
+      <p>Thank you for checking out Lancers HQ!</p>
+  
+      <h4 class="exo-2-bold">Address</h4>
+      <p>Main Headquarters: Near the University of Cebu</p>
+  
+      <h4 class="exo-2-bold">Contacts</h4>
+      <p>Email: <a href="#">support@lancers_ygo.com</a> <br />
+        Phone: +63-985-456-2678</p>
+  
+      <h4 class="exo-2-bold">Follow Us</h4>
+      <p><a href="https://www.facebook.com">Facebook</a> |
+        <a href="https://www.instagram.com">Instagram</a> |
+        <a href="https://www.x.com">X</a>
+      </p>
+  
+  
+      <h4 class="exo-2-bold">Join our Community:</h4>
+      <p><a href="#">Sign up</a> for our newsletter to stay updated on the latest
+        products, tournaments, and community events.</p>
+    </div>
     <hr />
-
-    <h5>
-      Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not
-      officially affiliated with Konami Digital Entertainment.
-    </h5>
-    <h6>Developed by: Dacua, Marc Eugene</h6>
+    <div class="footer exo-2-normal">
+      <h5>
+        Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not
+        officially affiliated with Konami Digital Entertainment. <br>&#169 Developed by MarNonymous792
+      </h5>
+    </div>
   </body>
 </html>
