--- a/accessories.html
+++ b/accessories.html
@@ -22,6 +22,14 @@
     <a href="index.html" class="exo-2-light navbutton" style="border-left-width: 1px;">Home</a><a href="products.html"
       class="exo-2-light navbutton">Products</a><a href="community.html" class="exo-2-light navbutton">Community</a>
   </div>
+  <hr>
+    <div class="navbar mini">
+        <!-- center content of navbar -->
+        <a href="core_set.html" class="exo-2-light navbutton" style="border-left-width: 1px;">Core Set</a>
+        <a href="deck_build.html"class="exo-2-light navbutton">Deck Builders</a>
+        <a href="singles.html" class="exo-2-light navbutton">Singles</a>
+        <a href="accessories.html" class="exo-2-light navbutton">Accessories</a>
+      </div>
 
   <hr />
   <h2 class="exo-2-bold title">Accessories</h2>
