added button style and card style change

--- a/accessories.html
+++ b/accessories.html
@@ -74,8 +74,8 @@
       </p>
     </div>
 
-    <img src="images/accessories/small box.jpg" alt="small deck box" class="card-2" />
-    <img src="images/accessories/tower deck box.jpg" alt="tower deck box" class="card-2" />
+    <img src="images/accessories/small box.jpg" alt="small deck box" class="card" />
+    <img src="images/accessories/tower deck box.jpg" alt="tower deck box" class="card" />
 
     <div class="box">
       <li class="exo-2-bold title">Playmats</li>
@@ -85,8 +85,8 @@
       </p>
     </div>
 
-    <img src="images/accessories/classic playmat.jpg" alt="playmat with classic design" class="card-2" />
-    <img src="images/accessories/art playmat.jpg" alt="playmat with promethean princess art" class="card-2" />
+    <img src="images/accessories/classic playmat.jpg" alt="playmat with classic design" class="card" />
+    <img src="images/accessories/art playmat.jpg" alt="playmat with promethean princess art" class="card" />
 
     <div class="box">
       <li class="exo-2-bold title">Coins and Dice</li>
@@ -96,9 +96,9 @@
       </p>
     </div>
 
-    <img src="images/accessories/coin_front.jpg" alt="blue eyes white dragon front photo" class="card-2" />
-    <img src="images/accessories/coin_back.jpg" alt="yugioh coin back photo" class="card-2" />
-    <img src="images/accessories/dice.jpg" alt="blue eyes white dragon dice photo" class="card-2" />
+    <img src="images/accessories/coin_front.jpg" alt="blue eyes white dragon front photo" class="card" />
+    <img src="images/accessories/coin_back.jpg" alt="yugioh coin back photo" class="card" />
+    <img src="images/accessories/dice.jpg" alt="blue eyes white dragon dice photo" class="card" />
 
     <div class="box">
       <li class="exo-2-bold title">Binders</li>
@@ -107,8 +107,8 @@
       </p>
     </div>
 
-    <img src="images/accessories/binder_outside.jpg" alt="binder outer preference" class="card-2" />
-    <img src="images/accessories/binder_inside.jpg" alt="binder inside preference" class="card-2" />
+    <img src="images/accessories/binder_outside.jpg" alt="binder outer preference" class="card" />
+    <img src="images/accessories/binder_inside.jpg" alt="binder inside preference" class="card" />
 
   </ul>
   <br />
