--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       Located near the University of Cebu, our main headquarters is where our
       love for the game comes to life.
     </p>
+    <br>
     <p class="exo-2-normal">
       At Lancers, we're more than just a store—we're a group of dedicated
       duelists who share a deep passion for Yu-Gi-Oh! Our journey started with a
@@ -60,10 +61,13 @@
       Browse our extensive product page to find everything from the latest Core
       Sets to exclusive Singles, and all the essential Accessories you need.
       Whether you're building a new deck or looking for that one special card,
-      we've got you covered. <a href="products.html">Click here >>></a>
+      we've got you covered. 
     </p>
-
-  </div>
+    <br>
+    <div class="button exo-2-bold">
+      <a href="products.html">>>Learn more<<</a> 
+    </div>
+    </div>
 
   <!-- box 3 -->
   <div class="box">
@@ -72,10 +76,12 @@
       At Lancers, we believe that Yu-Gi-Oh! is more than just a game—it's a way
       to connect, share, and grow as duelists. Our vibrant community is the
       heart of what we do, and we're proud to offer a space where players of all
-      levels can come together to enjoy the game we all love. <a href="community.html">Click here >>></a>
+      levels can come together to enjoy the game we all love. 
     </p>
-
-
+    <br>
+    <div class="button exo-2-bold">
+      <a href="community.html">>>Learn more<<</a> 
+    </div>
   </div>
 
   <br />
