--- a/products.html
+++ b/products.html
@@ -41,8 +41,11 @@
           latest and most essential cards that every duelist needs. These sets
           offer a balanced mix of monsters, spells, and traps, perfect for
           enhancing your deck and staying competitive in the ever-evolving game.
-          <a href="core_set.html" class="">Learn more>>></a>
         </p>
+        <br>
+        <div class="button exo-2-bold">
+          <a href="core_set.html">>>Learn more<<</a> 
+        </div>
       </div>
 
       <div class="box ">
@@ -53,8 +56,11 @@
           themed cards that work together to create powerful combos. Whether
           you're aiming to dominate in tournaments or just enjoy casual play,
           our Deck Builders will set you on the path to victory.
-          <a href="deck_build.html">Learn More...</a>
         </p>
+        <br>
+        <div class="button exo-2-bold">
+          <a href="deck_build.html">>>Learn more<<</a> 
+        </div>
       </div>
 
       <div class="box ">
@@ -65,8 +71,11 @@
           from rare and ultra-rare to common must-haves, ensuring you can find
           exactly what you need to fine-tune your strategy and outplay your
           opponents.
-          <a href="singles.html">Learn More...</a>
         </p>
+        <br>
+        <div class="button exo-2-bold">
+          <a href="community.html">>>Learn more<<</a> 
+        </div>
     </div>
 
       <div class="box">
@@ -74,8 +83,12 @@
         <p class="exo-2-normal">
           Keep your cards in pristine condition and showcase your dueling style
           with our range of Accessories.
-          <a href="accessories.html">Learn More...</a>
         </p>
+        <br>
+        <div class="button exo-2-bold">
+          <a href="community.html">>>Learn more<<</a> 
+        </div>
+        
     </div>
     </ul>
 
