--- a/community.html
+++ b/community.html
@@ -25,7 +25,7 @@
   <hr>
   <div class="box">
     <h2 class="exo-2-bold title">Community</h2>
-    <p>
+    <p class="exo-2-normal">
       At Lancers, we believe that Yu-Gi-Oh! is more than just a game—it's a way
       to connect, share, and grow as duelists. Our vibrant community is the
       heart of what we do, and we're proud to offer a space where players of all
@@ -34,19 +34,20 @@
   
   <div class="box">
     <h3 class="exo-2-bold title">Tournaments</h3>
-    <p>
+    <p class="exo-2-normal">
       We host Tournaments regularly, providing an exciting and competitive
       environment for duelists to test their skills and strategies. Whether
       you're aiming for the top spot or just looking to have fun, our
       tournaments are a great way to challenge yourself and meet other
       passionate players.
     </p>
-    <p>
+    <br>
+    <p class="exo-2-normal">
       Explore the different tournament formats available at Lancers by clicking
       in one of the links
     </p>
     <br>
-    <ol class="exo-2-normal">
+    <ol class="exo-2-light">
       <li><a href="sanctioned.html">Sanctioned Tournament</a></li>
       <li><a href="casual.html">Casual Tournament</a></li>
     </ol>
@@ -54,15 +55,16 @@
   
   <div class="box">
     <h3 class="exo-2-bold title">Deck Profiles</h3>
-    <p>
+    <p class="exo-2-normal">
       We encourage our community members to Share Deck Profiles. By sharing your
       deck builds and strategies, you can inspire others and learn new
       techniques to improve your own gameplay. It's all about growing together
       and helping each other become better duelists.
+      <br><br>
+      Check out our featured Deck Profiles
     </p>
-    <p>Check out our featured Deck Profiles</p>
     <br>
-    <ol class="exo-2-normal">
+    <ol class="exo-2-light">
       <li><a href="salad.html">Salamangreat</a></li>
       <li><a href="cydra.html">Cyber Dragon</a></li>
       <li><a href="drytron.html">Cyber Angel Drytons</a></li>
@@ -72,7 +74,7 @@
   
   <div class="box">
     <h3 class="exo-2-bold title">Trading</h3>
-  <p>
+  <p class="exo-2-normal">
     Trading Cards is another cornerstone of our community. We understand that
     building the perfect deck often involves finding those specific cards that
     make all the difference. Our community is active in trading, allowing you
