--- a/salad.html
+++ b/salad.html
@@ -25,6 +25,7 @@
     <hr />
     <h2 class="exo-2-bold title">Deck Profile</h2>
 
+    <a href="community.html"><img src="arrow_back.png" alt="">Back</a>
     <div class="box" style="text-align: center;">
       <h3 class="exo-2-bold title">Deck used: Salamangreat</h3>
     <h4 class="exo-2-bold title">Duelist: Marc Eugene Dacua</h4>
