added hover styles and display styles

--- a/dinos.html
+++ b/dinos.html
@@ -10,7 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
-  
+    
+    <style>
+      .box img{
+        width:700px;
+      }
+    </style>
   </head>
   <body>
     <h1 class="exo-2-bold webtitle">Lancers HQ <img src="images/ygo_logo.png" alt="Yu-Gi-Oh Logo" /></h1>
@@ -23,7 +28,7 @@
     </div>
 
     <hr />
-    <div class="box">
+    <div class="box" style="text-align: center;">
       <h2 class="exo-2-bold title">Deck Profile</h2>
 
     <h3 class="exo-2-bold title">Deck used: Dinosaur</h3>
