--- a/drytron.html
+++ b/drytron.html
@@ -23,13 +23,13 @@
     </div>
 
     <hr />
-    <div class="box">
+    <div class="box" style="text-align: center;">
       <h2 class="exo-2-bold title">Deck Profile</h2>
 
     <h3 class="exo-2-bold title">Deck used: Cyber Angel Dryton</h3>
     <h4 class="exo-2-bold title">Duelist: Nelsy Rosas</h4>
 
-    <img src="images/decklist/drytron.jpg" alt="Dryton deck list" />
+    <img src="images/decklist/drytron.jpg" alt="Dryton deck list" class="image-border"/>
     </div>
     
     <div class="box">
