--- a/community.html
+++ b/community.html
@@ -11,6 +11,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+
+    <style>
+      .box a:hover{
+        color: rgba(247, 247, 248, 0.507);
+      }
+    </style>
 </head>
 
 <body>
