--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   </div>
   <!-- box two -->
-  <div class="box">
+  <div class="box square">
     <h2 class="exo-2-bold title">Products</h2>
 
     <p class="exo-2-normal">
@@ -70,7 +70,7 @@
     </div>
 
   <!-- box 3 -->
-  <div class="box">
+  <div class="box square">
     <h2 class="title exo-2-bold">Community</h2>
     <p class="exo-2-normal">
       At Lancers, we believe that Yu-Gi-Oh! is more than just a game—it's a way
