--- a/products.html
+++ b/products.html
@@ -74,7 +74,7 @@
         </p>
         <br>
         <div class="button exo-2-bold">
-          <a href="community.html">>>Learn more<<</a> 
+          <a href="singles.html">>>Learn more<<</a> 
         </div>
     </div>
 
@@ -86,7 +86,7 @@
         </p>
         <br>
         <div class="button exo-2-bold">
-          <a href="community.html">>>Learn more<<</a> 
+          <a href="accessories.html">>>Learn more<<</a> 
         </div>
         
     </div>
