--- a/products.html
+++ b/products.html
@@ -55,7 +55,7 @@
           products are designed to give you a solid foundation, complete with
           themed cards that work together to create powerful combos. Whether
           you're aiming to dominate in tournaments or just enjoy casual play,
-          our Deck Builders will set you on the path to victory..
+          our Deck Builders will set you on the path to victory.
         </p>
         <br>
         <div class="button exo-2-bold">
