--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
     </p>
 
   </div>
+  <div class="wrap">
   <!-- box two -->
-  <div class="box square">
+  <div class="box" style="padding-bottom: 20px;padding-top: 5px;">
     <h2 class="exo-2-bold title">Products</h2>
 
     <p class="exo-2-normal">
@@ -66,11 +67,12 @@
     <br>
     <div class="button exo-2-bold">
       <a href="products.html">>>Learn more<<</a> 
+      <br><br>
     </div>
     </div>
 
   <!-- box 3 -->
-  <div class="box square">
+  <div class="box">
     <h2 class="title exo-2-bold">Community</h2>
     <p class="exo-2-normal">
       At Lancers, we believe that Yu-Gi-Oh! is more than just a game—it's a way
@@ -83,6 +85,7 @@
       <a href="community.html">>>Learn more<<</a> 
     </div>
   </div>
+</div>
 
   <br />
   <hr />
