style update with new uploads

--- a/deck_build.html
+++ b/deck_build.html
@@ -10,6 +10,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <style>
+        img[src="images/deck_build/dbtm.png"]:hover{
+            content: url('/images/deck_build/TAMA.webp');
+        }
+        img[src="images/deck_build/dbad.png"]:hover{
+            content: url('/images/deck_build/AMDE.webp');
+        }
+        img[src="images/deck_build/dbws.png"]:hover{
+            content: url('/images/deck_build/WISU.webp');
+        }
+        img[src="images/deck_build/dbvs.png"]:hover{
+            content: url('/images/deck_build/VASM.webp');
+        }
+        img[src="images/deck_build/dbcb.png"]:hover{
+            content: url('/images/deck_build/CRBR.webp');
+        }
+    </style>
 </head>
 
 <body>
