--- a/singles.html
+++ b/singles.html
@@ -37,7 +37,7 @@
   <ul>
     <li class="exo-2-bold tray-title">HR</li>
       <div class="tray">
-        <img src="images/singles/HR/10083.jpg" alt="" />
+        <img src="images/singles/HR/CrystalWing.webp" alt="" />
       </div>
     
     <li class="exo-2-bold tray-title">SCR</li>
