--- a/core_set.html
+++ b/core_set.html
@@ -11,6 +11,31 @@
   <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
+
+  <style>
+    img[src="images/core_set/dune.png"]:hover{
+      content: url('/images/core_set/DUNE.webp');
+    }
+    img[src="images/core_set/agov.png"]:hover{
+      content: url('/images/core_set/AGOV.webp');
+    }
+    img[src="images/core_set/phni.png"]:hover{
+      content: url('/images/core_set/PHNI.webp');
+    }
+    img[src="images/core_set/lede.png"]:hover{
+      content: url('/images/core_set/LEDE.webp');
+    }
+    img[src="images/core_set/info.png"]:hover{
+      content: url('/images/core_set/INFO.webp');
+    }
+    img[src="images/core_set/rota.png"]:hover{
+      content: url('/images/core_set/ROTA.webp');
+    }
+    img[src="images/core_set/suda.png"]:hover{
+      content: url('/images/core_set/SUDA.webp');
+    }
+
+  </style>
 </head>
 
 <body>
