--- a/core_set.html
+++ b/core_set.html
@@ -14,25 +14,25 @@
 
   <style>
     img[src="images/core_set/dune.png"]:hover{
-      content: url('/images/core_set/DUNE.webp');
+      content: url('/images/core_set/DUNE-EN.png');
     }
     img[src="images/core_set/agov.png"]:hover{
-      content: url('/images/core_set/AGOV.webp');
+      content: url('/images/core_set/AGOV-EN.png');
     }
     img[src="images/core_set/phni.png"]:hover{
-      content: url('/images/core_set/PHNI.webp');
+      content: url('/images/core_set/PHNI-EN.png');
     }
     img[src="images/core_set/lede.png"]:hover{
-      content: url('/images/core_set/LEDE.webp');
+      content: url('/images/core_set/LEDE-EN.png');
     }
     img[src="images/core_set/info.png"]:hover{
-      content: url('/images/core_set/INFO.webp');
+      content: url('/images/core_set/INFO-EN.png');
     }
     img[src="images/core_set/rota.png"]:hover{
-      content: url('/images/core_set/ROTA.webp');
+      content: url('/images/core_set/ROTA-EN.png');
     }
     img[src="images/core_set/suda.png"]:hover{
-      content: url('/images/core_set/SUDA.webp');
+      content: url('/images/core_set/SUDA-EN.png');
     }
 
   </style>
