--- a/core_set.html
+++ b/core_set.html
@@ -85,7 +85,7 @@
     </div>
 
     <div class="card exo-2-bold">
-      <img src="images/core_set/lede.png" alt="Legacy off Destruction cover photo" />
+      <img src="images/core_set/lede.png" alt="Legacy of Destruction cover photo" />
       <li>
         <a href="https://yugipedia.com/wiki/Legacy_of_Destruction">Legacy of Destruction</a>
       </li>
