style update with uploads

--- a/deck_build.html
+++ b/deck_build.html
@@ -13,19 +13,19 @@
 
     <style>
         img[src="images/deck_build/dbtm.png"]:hover{
-            content: url('/images/deck_build/TAMA.webp');
+            content: url('/images/deck_build/TAMA-EN.png');
         }
         img[src="images/deck_build/dbad.png"]:hover{
-            content: url('/images/deck_build/AMDE.webp');
+            content: url('/images/deck_build/AMDE-EN.png');
         }
         img[src="images/deck_build/dbws.png"]:hover{
-            content: url('/images/deck_build/WISU.webp');
+            content: url('/images/deck_build/WISU-EN.png');
         }
         img[src="images/deck_build/dbvs.png"]:hover{
-            content: url('/images/deck_build/VASM.webp');
+            content: url('/images/deck_build/VASM-EN.png');
         }
         img[src="images/deck_build/dbcb.png"]:hover{
-            content: url('/images/deck_build/CRBR.webp');
+            content: url('/images/deck_build/CRBR-EN.png');
         }
 
     </style>
