--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
   <!-- box 3 -->
-  <div class="box">
+  <div class="box" style="padding-bottom: 20px;padding-top: 5px;">
     <h2 class="title exo-2-bold">Community</h2>
     <p class="exo-2-normal">
       At Lancers, we believe that Yu-Gi-Oh! is more than just a game—it's a way
