--- a/accessories.html
+++ b/accessories.html
@@ -11,6 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+    .card img, img{
+      width: 200px;
+      height: 200px;
+    }
+  </style>
 </head>
 
 <body>
