--- a/accessories.html
+++ b/accessories.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
-    .card img, img{
+    .card img{
       width: 200px;
       height: 200px;
     }
