--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <!-- box 3 -->
   <div class="box" style="padding-bottom: 20px;padding-top: 5px;">
-f    <h2 class="title exo-2-bold">Community</h2>
+    <h2 class="title exo-2-bold">Community</h2>
     <p class="exo-2-normal">
       At Lancers, we believe that Yu-Gi-Oh! is more than just a game—it's a way
       to connect, share, and grow as duelists. Our vibrant community is the
