--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li>
             <a href="#">Products ▼</a>
             <ul class="dropdown">
-                <li><a href="#">Core Boxes</a></li>
+                <li><a href="core_set.html">Core Boxes</a></li>
                 <li><a href="#">Deck Builders</a></li>
                 <li><a href="#">Singles</a></li>
                 <li><a href="#">Accessories</a></li>
@@ -148,13 +148,18 @@
                 <p>Thank you for checking out Lancers HQ</p>
             </div>
             <div class="social-icons">
-                <a href=""><i class="fa-brands fa-facebook"></i></a>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-                <a href=""><i class="fa-brands fa-github"></i></a>
-                <a href=""><i class="fa-brands fa-discord"></i></a>
+                <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.x.com"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.github.com"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.discord.com"><i class="fa-brands fa-discord"></i></a>
             </div>
         </div>
+    </div>
+
+    <div class="copyright">
+        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital Entertainment.
+            © Developed by <a href="about-dev.html">MarNonymous792</a></p>
     </div>
 </body>
 
